Start implementing  * implemented CLI & main stracture  * implemented "dismiss positional-only arguments"  * to implement decorator for runtime checks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,18 @@
     "python.linting.enabled": true,
     "restructuredtext.confPath": "${workspaceFolder}/docs/conf.py",
     "cSpell.words": [
+        "Envs",
+        "NPROCESSORS",
+        "flst",
+        "funcdef",
         "gaocegege",
-        "spython"
+        "getcwd",
+        "ispy",
+        "parso",
+        "poflag",
+        "posuer",
+        "sched",
+        "spython",
+        "sysconf"
     ]
 }
