Implemented core functions (testing)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,12 @@
         "funcdef",
         "gaocegege",
         "getcwd",
+        "inited",
         "ispy",
         "parso",
         "poflag",
         "posuer",
+        "prflag",
         "sched",
         "spython",
         "sysconf"
