--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,11 @@ coverage = "*"
 doc8 = "*"
 pylint = "*"
 sphinx = "*"
+ipython = "*"
 
 [packages]
+tbtrim = "*"
+parso = "~=0.5.0"
 
 [requires]
 python_version = "3.7"
