Regular update  * implemented poseur  * to add test cases  * to review README  * to make Homebrew formula  * to revise distribution Makefile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,10 @@
     "python.linting.enabled": true,
     "restructuredtext.confPath": "${workspaceFolder}/docs/conf.py",
     "cSpell.words": [
+        "CWORD",
         "Envs",
         "NPROCESSORS",
+        "cmds",
         "flst",
         "funcdef",
         "gaocegege",
@@ -13,7 +15,7 @@
         "ispy",
         "parso",
         "poflag",
-        "posuer",
+        "postmt",
         "prflag",
         "sched",
         "spython",
