--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,9 @@ autopep8 = "*"
 codecov = "*"
 coverage = "*"
 doc8 = "*"
+homebrew-pypi-poet = "*"
 pylint = "*"
+requests = "*"
 sphinx = "*"
 ipython = "*"
 
