--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
         "sched",
         "spython",
         "sysconf",
-        "virtualenv"
+        "virtualenv",
+        "xenial"
     ],
     "python.linting.enabled": true,
     "python.pythonPath": ".venv/bin/python",
