--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ git:
 # command to install dependencies
 install:
   - pip install pipenv
+  - rm -f setup.py
+  - cp -f scripts/setup.pypi.py setup.py
   - pipenv install --dev
 
 # command to run tests
