--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "CWORD",
         "Envs",
         "NPROCESSORS",
+        "UUIDs",
         "aktau",
         "bufpre",
         "bufsuf",
@@ -13,6 +14,7 @@
         "getcwd",
         "inited",
         "ispy",
+        "nuid",
         "parso",
         "poflag",
         "postmt",
