--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
-env:
-  - PIPENV_SKIP_LOCK=1
 
 # no submodules
 git:
@@ -15,10 +13,9 @@ git:
 
 # command to install dependencies
 install:
-  - pip install pipenv
   - rm -f setup.py
   - cp -f scripts/setup.pypi.py setup.py
-  - pipenv install --dev
+  - pip install -r requirements-ci.txt
 
 # command to run tests
 script:
