--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "getcwd",
         "inited",
         "ispy",
+        "nargs",
         "nuid",
         "parso",
         "poflag",
@@ -28,6 +29,7 @@
         "sraise",
         "sreturn",
         "sysconf",
+        "tbtrim",
         "virtualenv",
         "xenial"
     ],
