--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
     "cSpell.words": [
         "CWORD",
+        "Disutils",
         "Envs",
         "NPROCESSORS",
         "UUIDs",
         "aktau",
         "bufpre",
         "bufsuf",
+        "bysource",
         "cmds",
         "flst",
         "funcdef",
@@ -14,13 +16,20 @@
         "getcwd",
         "inited",
         "ispy",
+        "ivar",
+        "myscript",
         "nargs",
         "nuid",
         "parso",
         "poflag",
         "postmt",
         "prflag",
+        "printf",
+        "pybpc",
         "pyenv",
+        "pyproject",
+        "rstcheck",
+        "rtype",
         "sched",
         "sdef",
         "slambda",
@@ -30,10 +39,12 @@
         "sreturn",
         "sysconf",
         "tbtrim",
+        "toctree",
+        "undoc",
         "virtualenv",
         "xenial"
     ],
     "python.linting.enabled": true,
-    "python.pythonPath": ".venv/bin/python",
+    "python.pythonPath": "/Users/jarryshaw/GitHub/pybpc/vendor/poseur/.venv/bin/python3.8",
     "restructuredtext.confPath": "${workspaceFolder}/docs/conf.py"
 }
