revised unnecessary files & updated deps

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 temp
 Tap
+.vscode
 
 # Created by https://www.gitignore.io/api/python,macos,linux,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,macos,linux,windows,visualstudiocode
