--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install .[test]
+        pip install --pre "f2format>=0.8.7rc2"  # temporary dependency hack
     - name: Test
       run: coverage run tests/test.py
     - name: Upload coverage report
